--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Gabriel Siriani, Brenda Evers, Raissa Barbieri, Maria Eduarda, Eduardo Torres",
   "license": "ISC",
   "devDependencies": {
+    "daisyui": "^3.9.4",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.3.5"
